Closed
Bug 526152
Opened 16 years ago
Closed 16 years ago
jemalloc alignment assertion and abort on Linux
Categories
(Core :: Memory Allocator, defect)
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| status1.9.2 | --- | .7-fixed |
People
(Reporter: mfinkle, Assigned: dmandelin)
References
Details
Attachments
(1 file)
|
795 bytes,
patch
|
pavlov
:
review+
dveditz
:
approval1.9.2.7+
|
Details | Diff | Splinter Review |
I am getting the following assertion when attempting to start Fennec, a xulrunner based application, on Ubunto 8.10
jemalloc.c:5801: Failed assertion: "((alignment - 1) & alignment) == 0 && alignment >= sizeof(void *)"
Stack looks like this:
Stack:
UNKNOWN [/lib/tls/i686/cmov/libpthread.so.0 +0x0000E618]
abort+0x00000188 [/lib/tls/i686/cmov/libc.so.6 +0x0002D268]
memalign+0x000000AF [../../mobile-debug/mobile/dist/bin/fennec +0x0001FCEA]
__libc_memalign+0x00000042 [/lib/tls/i686/cmov/libc.so.6 +0x00073A42]
___tls_get_addr+0x000000AF [/lib/ld-linux.so.2 +0x0001081F]
UNKNOWN [/home/mfinkle/Source/mozilla-trunk/mobile-debug/mobile/dist/bin/xulrunner/libxul.so +0x01473BAD]
NS_InitXPCOM3_P+0x000000D9 [/home/mfinkle/Source/mozilla-trunk/mobile-debug/mobile/dist/bin/xulrunner/libxul.so +0x0140FBBC]
UNKNOWN [/home/mfinkle/Source/mozilla-trunk/mobile-debug/mobile/dist/bin/xulrunner/libxul.so +0x001CD847]
XRE_main+0x000021BD [/home/mfinkle/Source/mozilla-trunk/mobile-debug/mobile/dist/bin/xulrunner/libxul.so +0x001D3800]
UNKNOWN [../../mobile-debug/mobile/dist/bin/fennec +0x000024AD]
__libc_start_main+0x000000E5 [/lib/tls/i686/cmov/libc.so.6 +0x00016685]
| Reporter | ||
Updated•16 years ago
|
Component: Keyboard: Navigation → jemalloc
QA Contact: keyboard.navigation → jemalloc
| Assignee | ||
Comment 1•16 years ago
|
||
Bug analysis for the record: this started asserting because a boolean TLS variable was added, with size == 1 on Ubuntu. jemalloc's memalign asserts that the alignment is at least pointer-width. We can fix just by going up to that size if necessary; the alignment guarantee offered by the memalign API is still upheld.
| Assignee | ||
Updated•16 years ago
|
Attachment #410067 -
Flags: review? → review?(pavlov)
Updated•16 years ago
|
Attachment #410067 -
Flags: review?(pavlov) → review+
| Assignee | ||
Comment 2•16 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Comment 4•16 years ago
|
||
I'd love to see this fix moved over to 1.9.2 to make debugging fennec on n900 possible without patch
Flags: wanted1.9.2?
Comment 5•16 years ago
|
||
I can reproduce in on Fedora12/Firefox 3.6.b3. It would be great to have it in 1.9.2.
Updated•16 years ago
|
Attachment #410067 -
Flags: approval1.9.2.1?
Comment 6•15 years ago
|
||
Comment on attachment 410067 [details] [diff] [review]
Patch
Approving this because we believe it's still hurting the ability to debug fennec. If that's stopped being a problem for other reasons, then we should clear this approval rather than adding what looks like workaround code, right?
Attachment #410067 -
Flags: approval1.9.2.2? → approval1.9.2.3+
Updated•15 years ago
|
Attachment #410067 -
Flags: approval1.9.2.3+ → approval1.9.2.3?
Comment 7•15 years ago
|
||
lets take this, should have done long ago
Comment on attachment 410067 [details] [diff] [review]
Patch
a=LegNeato for 1.9.2.5. Please ONLY land this on mozilla-1.9.2 default, as we
are still working on 1.9.2.4 on the relbranch
Attachment #410067 -
Flags: approval1.9.2.4? → approval1.9.2.5+
| Assignee | ||
Comment 9•15 years ago
|
||
| Assignee | ||
Updated•15 years ago
|
status1.9.2:
--- → .6-fixed
Flags: wanted1.9.2?
Updated•15 years ago
|
Attachment #410067 -
Flags: approval1.9.2.5+ → approval1.9.2.6+
You need to log in
before you can comment on or make changes to this bug.
Description
•