Bug 526152: make jemalloc's memalign support alignments less than pointer size, r=pavlov